--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "framer-motion": "https://esm.sh/framer-motion@^12.23.26"
+    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
+    "gsap": "https://esm.sh/gsap@3.12.5",
+    "gsap/ScrollTrigger": "https://esm.sh/gsap@3.12.5/ScrollTrigger",
+    "@gsap/react": "https://esm.sh/@gsap/react@2.1.0",
+    "gsap/": "https://esm.sh/gsap@^3.14.2/"
   }
 }
 </script>
